Time: 2 ms (93.92%) | Memory: 46 MB (10.24%) - LeetSync